--- a/lol-api/index.html
+++ b/lol-api/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>LOL</title>
-	<!-- <link rel="stylesheet" href="dist/bundle.css"> -->
+	<link rel="stylesheet" href="dist/bundle.css">
 </head>
 <body>
 	<div id="root"></div>
