--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>LOL</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="/dist/bundle.css">
+	<link rel="stylesheet" href="dist/bundle.css">
 </head>
 <body>
 	<div id="root"></div>
